# cost_my_chemo_bot

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  deploy.sh  main.py  main_aiogram.py  main_fastapi.py  pyproject.toml  requirements.txt  set_webhook.sh  test_creds.py  test_webhook.py
.github/workflows/: github-actions-demo.yml
cost_my_chemo_bot/: config.py  db.py
cost_my_chemo_bot/action_logger/: main.py
cost_my_chemo_bot/bots/telegram/: bot.py  dispatcher.py  filters.py  keyboard.py  main.py  messages.py  send.py  state.py  storage.py
cost_my_chemo_bot/bots/telegram/handlers/: __init__.py  back.py  cancel.py  category.py  course.py  height.py  lead.py  nosology.py  start.py  subcategory.py  weight.py  welcome.py
scripts/: check_webhook.sh  deploy.sh  get_me.sh  set_webhook.sh  set_webhook_local.sh
scripts/python/: set_webook.py
scripts/shell/: check_webhook.sh  serve_function_local.sh
