[tool.isort]
profile = "black"

[tool.poetry]
name = "cost-my-chemo-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cost_my_chemo_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
gspread-asyncio = "^1.7.1"
aiogram = "^2.25.1"
pydantic = {version = "^1.10.4", extras = ["email"]}
python-dotenv = "^0.21.1"
httpx = "^0.23.3"
functions-framework = "^3.3.0"
google-cloud-firestore = "^2.9.1"
gcloud-aio-storage = "^8.0.0"
logfmt-logger = "^0.1.2"
fastapi = {version = "^0.91.0", extras = ["all"]}
phonenumbers = "^8.13.6"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
